2003-01-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/output-rait.h: #define stralloc strdup
	* tape-src/output-rait.c: Revert patch of 2003-01-26, we don't have
	  vstralloc in standalone.

2003-01-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Reported by Doug Kingston <dpk@randomnotes.org>

	* recover-src/Makefile.am: Set AM_YFLAGS instead of YFLAGS.

2003-01-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/output-rait.c (tapeio_next_devname): Use vstralloc.

2003-01-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* changer-src/chg-scsi-chio.c: Change strdup to stralloc.
	* changer-src/chg-scsi.c: Ditto.
	* changer-src/scsi-aix.c: Ditto.
	* changer-src/scsi-bsd.c: Ditto.
	* changer-src/scsi-cam.c: Ditto.
	* changer-src/scsi-changer-driver.c: Ditto.
	* changer-src/scsi-hpux_new.c: Ditto.
	* changer-src/scsi-irix.c: Ditto.
	* changer-src/scsi-linux.c: Ditto.
	* changer-src/scsi-solaris.c: Ditto.
	* changer-src/sense.c: Ditto.
	* tape-src/output-rait.c: Ditto.

2003-01-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/taper.c (read_file): Don't count header in filesize.

2003-01-25  John R. Jackson (jrj@purdue.edu)

	* tape-src/tapeio.c: Fix tape_access() and tape_stat() problem caused
	  by indeterminate compiler order of evaluation.

2003-01-25  John R. Jackson (jrj@purdue.edu)

	* restore-src/amidxtaped.c: Log errno when tape_stat fails.
	* restore-src/amrestore.c: Ditto.
	* tape-src/output-rait.c: Ditto.

2003-01-24  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: print an usage by tape.

2003-01-23  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* recover-src/extract_list.c (add_extract_item, delete_extract_item):
	  Check also for level when comparing label.

2003-01-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	Do not build chg-scsi-chio, it is buggy.
	* changer-src/Makefile.am (libexec_PROGRAMS): remove $(CHIO_SCSI).