@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: extract_list.c,v 1.81 2003/01/23 23:02:26 martinea Exp $
+ * $Id: extract_list.c,v 1.82 2003/01/31 02:42:09 martinea Exp $
  *
  * implements the "extract" command in amrecover
  */
@@ -1730,7 +1730,7 @@ void extract_files P((void))
 	    else if(otc == 1) {
 		delete_tape_list(elist); /* tape failed so delete from list */
 	    }
-	    else { /* TAPE_RETRY */
+	    else { /* RETRY_TAPE */
 	    }
 	}
 	else {
